--- a/app/Core/settings.sample.env
+++ b/app/Core/settings.sample.env
@@ -1,8 +1,8 @@
 #Conexión a base de datos
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=personal_contacts
-DB_USERNAME=hugofriasmtz
-DB_PASSWORD=admin
+DB_DATABASE='name_of_database'
+DB_USERNAME=root
+DB_PASSWORD=
 DB_CHARSET=utf8
 DB_DEBUG=true
